--- a/CALCULADORA.HTML
+++ b/CALCULADORA.HTML
@@ -1,54 +1,75 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Pagina de ErikokGabo</title>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/css/bootstrap.min.css"></script>
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/css/bootstrap-theme.min.css"></script>
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/js/bootstrap.min.js"></script>
+<link href="https://fonts.cdnfonts.com/css/la-unica" rel="stylesheet">
+<link href="https://fonts.cdnfonts.com/css/thumbs-down" rel="stylesheet">
+<title>Calculadora de jared</title>
 </head>
-
 <body>
-    <div style="margin: 24px;">
-        <nav class="navbar navar-ligth" style="background-color:rgb(147, 143, 156);">
+    <div style="margin :24px;">
+        <nav class="nav navbar-light" style ="background-color: black;"> 
             <div class="container">
-                <a class="navbar-brand" href="index.html" style="color: black;">Inicio</a>
-                <div class="collapse navbar-collapse" id="navbaeNavDropdown">
-                    <ul class="nav naver-nav">
+                <a class="navbar-brand" href="index.html" style="color:red;">Inicio</a>
+                <div class="collapse navbar-collapse" id="navbarNavDropdown">
+                    <ul class="nav navbar-nav">
+
                         <li class="nav-item dropdown">
-                            <a class="nav-link dropdown-toggle" href="#" id="navbarDropMenuLInk" data-toggle="dropdown"
-                                aria-haspopup="true" aria-expanded="false">Unidad 1</a>
-                            <div class="dropDown-menu" aria-describedby="navbarDripDownMenuLink">
-                                <a class="dropdown-item" href="perfil.html">perfil</a><br>
-                                <a class="dropdown-item" href="calculadora.html">calculadora</a><br>
-                                <a class="dropdown-item" href="tienda.html">tienda parte 1</a><br>
-                            </div>
+                            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Unidad 1</a>
+                            <div class="dropdown-menu"
+                            aria-labelledby="navbarDropdownMenuLink">
+                        <a class="dropdown-item"
+                        href="file:///C:/Users/gokuo/OneDrive/Escritorio/perfiil.html">Perfil</a><br>
+                        <a class="dropdown-item"
+                        href="calculadora.html">Calculadora</a><br>
+                        <a class="dropdown-item"
+                        href="tienda.html">Tienda parte 1</a>
+                        </div>   
                         </li>
                         <li class="nav-item dropdown">
-                            <a class="nav-link dropdown-toggle" href="#" id="navbarDropMenuLInk" data-toggle="dropdown"
-                                aria-haspopup="true" aria-expanded="false">Unidad 2</a>
-                            <div class="dropDown-menu" aria-describedby="navbarDripDownMenuLink">
-                                <a class="dropdown-item" href="tiendapedido.html">tienda pedido</a><br>
-                                <a class="dropdown-item" href="json.html">Json</a><br>
-                                <a class="dropdown-item" href="tiendapedido2.html">tienda pedido 2</a><br>
-                            </div>
+                            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink"
+                            data-toggle="dropdown"
+                            aria-haspopup="true"
+                            aria-expanded="false" >Unidad 2</a>
+                            <div class="dropdown-menu"
+                            aria-labelledby="navbarDropdownMenuLink">
+                        <a class="dropdown-item"
+                        href="tiendapedido.html">tienda pedido</a><br>
+                        <a class="dropdown-item"
+                        href="json.html">json</a><br>
+                        <a class="dropdown-item"
+                        href="tiendapedido2.html">Tienda parte 2</a>
+                        </div>                           
                         </li>
                         <li class="nav-item dropdown">
-                            <a class="nav-link dropdown-toggle" href="#" id="navbarDropMenuLInk" data-toggle="dropdown"
-                                aria-haspopup="true" aria-expanded="false">Unidad 3</a>
-                            <div class="dropDown-menu" aria-describedby="navbarDripDownMenuLink">
-                                <a class="dropdown-item" href="basededatos.html">base de datos</a><br>
-                                <a class="dropdown-item" href="peliculas.html">peliculas</a><br>
-                            </div>
+                            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink"
+                            data-toggle="dropdown"
+                            aria-haspopup="true"
+                            aria-expanded="false" >Unidad 3</a>
+                            <div class="dropdown-menu"
+                            aria-labelledby="navbarDropdownMenuLink">
+                        <a class="dropdown-item"
+                         class="dropdown-item"
+                        href="basededatos.html">base de datos</a><br>
+                        <a class="dropdown-item"
+                        href="peliculas.html">peliculas</a>
+
+                        </div>
+                            
                         </li>
                     </ul>
                 </div>
             </div>
         </nav>
     </div>
-    </div>
     <style>
-        #{
+        *{
             margin: 0;
             padding: 0;
             box-sizing: border-box;
@@ -57,25 +78,35 @@
             font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
             display: grid;
             place-items: center;
-            background-image: linear-gradient(to right, rgba(135, 25, 199, 0.658), rgb(78, 76, 76) );
+            background-image: linear-gradient(to left,white,black);
             height: 100vh;
+            overflow: hidden;
         }
-        .cal{
-            width: 30%;
-            height: 60%;
+        .calc{
+            width: auto;
+            min-width: 300px;
+            max-width: 90%;
+            height: auto;
+            min-height: 400px ;
             background-color: transparent;
-            position: absolute;
-            border: 2px solid rgb(63, 34, 131);
+            position: relative;
+            border: 2px solid cyan;
             border-radius: 10px;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            padding: 20px;
+            flex-direction:column;
         }
         #ans{
             width: 90%;
-            align-content: center;
+            margin: 20px;
             margin-top: 20px;
-            font-family: Arial, Helvetica, sans-serif;
+            font-family: 'Thumbs Down', sans-serif;
             font-size: 20px;
-            color: blue;
+            color: red;
             text-align: right;
+            border-radius: 10px;
         }
         .btn input[type='button']{
             width: 70px;
@@ -86,37 +117,64 @@
             top: 20px;
             height: 55px;
             cursor: pointer;
+            font-size: 16px;
+            transition: all 0.5s ease;
+            background-color: transparent;
+            border-radius: 6px;
         }
-
+        .btn input[type='button']:hover{
+            background-color: rgb(47, 250, 20);
+            color: white;
+        }
     </style>
-    <input type="text" id="ans">
-    <div class="btn">
-        <input type="button" value="C" onclick="Clear()">
-        <input type="button" value="%" onclick="Solve('%')">
-        <input type="button" value="←" onclick="Solve('←')">
-        <input type="button" value="/" onclick="Solve('/')">
-        <br>
-        <input type="button" value="7" onclick="Solve('7')">
-        <input type="button" value="8" onclick="Solve('8')">
-        <input type="button" value="9" onclick="Solve('9')">
-        <input type="button" value="x" onclick="Solve('*')">
-        <br>
-        <input type="button" value="4" onclick="Solve('4')">
-        <input type="button" value="5" onclick="Solve('5')">
-        <input type="button" value="6" onclick="Solve('6')">
-        <input type="button" value="-" onclick="Solve('-')">
-        <br>
-        <input type="button" value="1" onclick="Solve('1')">
-        <input type="button" value="2" onclick="Solve('2')">
-        <input type="button" value="3" onclick="Solve('3')">
-        <input type="button" value="+" onclick="Solve('+')">
-        <br>
-        <input type="button" value="0" onclick="Solve('00')">
-        <input type="button" value="2" onclick="Solve('0')">
-        <input type="button" value="3" onclick="Solve('.')">
-        <input type="button" value="+" onclick="Result()">
-        <br>
+    <div class="calc">
+        <input type="text" id="ans">
+        <div class="btn">
+            <input type="button" value='C' onclick="Clear()">
+            <input type="button" value='%' onclick="Solve('%')">
+            <input type="button" value='←' onclick="Back('←')">
+            <input type="button" value='/' onclick="Solve('/')">
+            <br>
+            <input type="button" value='7'  onclick="Solve('7')">
+            <input type="button" value='8' onclick="Solve('8')">
+            <input type="button" value='9' onclick="Solve('9')">
+            <input type="button" value='' onclick="Solve('')">
+            <br>
+            <input type="button" value='4'  onclick="Solve('4')">
+            <input type="button" value='5' onclick="Solve('5')">
+            <input type="button" value='6' onclick="Solve('6')">
+            <input type="button" value='-' onclick="Solve('-')">
+            <br>
+            <input type="button" value='1'  onclick="Solve('1')">
+            <input type="button" value='2' onclick="Solve('2')">
+            <input type="button" value='3' onclick="Solve('3')">
+            <input type="button" value='+' onclick="Solve('+')">
+            <br>
+            <input type="button" value='00' onclick="Solve('00')">
+            <input type="button" value='0' onclick="Solve('0')">
+            <input type="button" value='.' onclick="Solve('.')">
+            <input type="button" value='=' onclick="Result()">
+            <br>
+        </div>
     </div>
+    <script>
+        const Solve=(val) =>{
+            const v=document.getElementById('ans');
+            v.value +=val;
+        }
+        const Clear = () =>{
+            const input=document.getElementById('ans');
+            input.value='';
+        }        
+        const Result = () =>{
+            const v1 = document.getElementById('ans').value;
+            const v2 = eval(v1);
+            document.getElementById('ans').value=v2;
+        }
+        const Back = () =>{
+            const back=document.getElementById('ans');
+            back.value=back.value.slice(0,-1);
+        }
+    </script>
 </body>
-
 </html>
