--- a/PERFIL.HTML
+++ b/PERFIL.HTML
@@ -11,7 +11,7 @@
         body{
             background-color: #731cad;
             font-family: 'Times New Roman', Times, serif;
-            color:rgb(0, 0, 0); /Esto es para el tpo de letra/
+            color:rgb(0, 0, 0); 
             text-align: center;
         }
     .foto-perfil{
@@ -27,7 +27,7 @@
     }
     </style>
     <div class="perfil">
-        <img src="pollito.jpg" alt="Arriba el imperio de los monkiboys" class="foto-perfil">
+        <img src="pocoyo.jpg" alt="Arriba el imperio de los monkiboys" class="foto-perfil">
         <h1 id="nombre">JoseMiguel</h1>
         <h3 id="Especialidad">Ape Programmer</h3>
         <u1>
